房源編輯頁面

--- a/Elaine/房東/HostRoomEdition.html
+++ b/Elaine/房東/HostRoomEdition.html
@@ -127,7 +127,7 @@
               <h3 class="mt-4 h3_room_detail">地址</h3>
               <button class="btn btn_edit_room">編輯</button>
             </div>
-            <p class="edit_room_location">No. 101號, Banxin Rd, Banqiao District, New Taipei City, Taiwan 220</ㄣ>
+            <p class="edit_room_location">No. 101號, Banxin Rd, Banqiao District, New Taipei City, Taiwan 220</p>
           </div>
           <!-- 街區描述編輯 -->
           <div class="edit_section edit_room_neighborhood_description_section">
@@ -151,8 +151,8 @@
             <h3 class="mt-4 h3_room_detail">位置分享</h3>
             <button class="btn btn_edit_room">編輯</button>
           </div>
-          <span class="b-block">大概位置</ㄋp>
-          <p class="edit_room_location_sharing">退訂後的地址隱藏功能：關閉</p>
+          <p>大概位置</p>
+          <span class="span_edit_room_location_sharing">退訂後的地址隱藏功能：關閉</span>
           </div>
           <!-- 美景編輯 -->
           <div class="edit_section edit_room_scenery_section">
@@ -165,25 +165,25 @@
           <!-- 房源與房型 -->
           <h2 class="mt-4 mb-4 h2_room_detail">房源與房型</h2>
           <!-- 房源類型編輯 -->
-          <div class="edit_section edit_room_location_section">
+          <div class="edit_section edit_room_type_section">
            <div class="d-flex justify-content-between">
              <h3 class="mt-4 h3_room_detail">房源類型</h3>
              <button class="btn btn_edit_room">編輯</button>
            </div>
            <p>私有公寓</p>
-           <p>房源類型: 整套房子／公寓</p>
+           <p class="p_room_type">房源類型: 整套房子／公寓</p>
           </div>
           <!-- 房間與空間編輯 -->
-          <div class="edit_section edit_room_location_section">
+          <div class="edit_section edit_room_space_section">
           <div class="d-flex justify-content-between">
             <h3 class="mt-4 h3_room_detail">房間與空間</h3>
             <button class="btn btn_edit_room">編輯</button>
           </div>
-            <span class="d-block">臥室: 1</span>
-            <span class="d-block">床數： 1</span>
-            <span class="d-block">衛浴: 1</span>
-            <span class="d-block">其他區域: 0</span>
-            <span class="d-block">房客可能會共用部分區域</span>
+            <span class="d-block span_room_space">臥室: 1</span>
+            <span class="d-block span_room_space">床數： 1</span>
+            <span class="d-block span_room_space">衛浴: 1</span>
+            <span class="d-block span_room_space">其他區域: 0</span>
+            <span class="d-block span_room_space">房客可能會共用部分區域</span>
           </div>
           <!-- 無障礙設施與服務編輯 -->
           <div class="edit_section edit_room_disabled_facilities_and_services_section">
@@ -204,27 +204,359 @@
           <!-- 提出意見 -->
           <button class="btn btn_your_opinions">提出意見</button>
         </div>
+
         <!-- 價格和可訂狀態(第二個tab) -->
         <div class="tab-pane fade" id="nav-price-and-order-status" role="tabpanel" aria-labelledby="nav-price-and-order-status-tab">
-          <!-- 定價 -->
+          <!-- 訂價 -->
           <h2 class="mt-4 mb-4 h2_price_and_order_satus">訂價</h2>
           <!-- 每晚價格編輯 -->
-          <div class="edit_section edit_price_and_order_satus_section">
+          <div class="edit_section edit_price_per_night_section">
             <div class="d-flex justify-content-between">
               <h3 class="mt-4 h3_price_and_order_satus">每晚價格</h3>
-              <button class="btn btn_edit_price_and_order_satus">編輯</button>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
             </div>
-            <p class="edit_price_and_order_satus">One4Night</p>
+            <span class="span_set_unit_price mb-2">你須要為房源設定價格。</span>
+            <a href="#">了解詳情</a>
+            <span class="d-block span_smart_setting_price">智慧訂價功能已關閉</span>
+            <span class="d-block span_basic_price">基本價格：$437 TWD</span>
           </div>
 
-        </div>
-        <!-- 政策和規則(第三個tab) -->
-        <div class="tab-pane fade" id="nav-policy-and-rule" role="tabpanel" aria-labelledby="nav-policy-and-rule-tab">
+          <!-- 房源幣別編輯 -->
+          <div class="edit_section edit_currency_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">房源幣別</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+            <p>TWD</p>
+          </div>
+
+          <!-- 折扣 -->
+          <h2 class="mt-4 mb-4 h2_price_and_order_satus">折扣</h2>
+          <!-- 週租折扣編輯 -->
+          <div class="edit_section edit_weekly_discount_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">週租折扣</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+            <p>未設定</p>
+          </div>
+
+          <!-- 月租折扣編輯 -->
+          <div class="edit_section edit_monthly_discount_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">月租折扣</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+            <p>未設定</p>
+          </div>
+
+          <!-- 自訂長租折扣編輯 -->
+          <div class="edit_section edit_longTerm_lease_discount_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">自訂長租折扣</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+            <p>未設定</p>
+          </div>
+
+          <!-- 早鳥折扣編輯 -->
+          <div class="edit_section edit_early_bird_discount_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">早鳥折扣</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+            <p>未設定</p>
+          </div>
+
+          <!-- 晚鳥折扣編輯 -->
+          <div class="edit_section edit_late_bird_discount_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">晚鳥折扣</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+            <p>未設定</p>
+          </div>
+
+          <!-- 額外費用 -->
+          <h2 class="mt-4 mb-4 h2_price_and_order_satus">額外費用</h2>
+          <!-- 清潔費編輯 -->
+          <div class="edit_section edit_cleaning_fee_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">清潔費</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+           <p>無須支付清潔費</p>
+          </div>
+
+          <!-- 寵物費編輯 -->
+          <div class="edit_section edit_pet_fee_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">寵物費</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+           <p>目前不允許攜帶寵物入住</p>
+          </div>
+
+          <!-- 額外房客費用編輯 -->
+          <div class="edit_section edit_extra_fee_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">額外房客費用</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+           <p>
+            未設定</p>
+          </div>
+
+          <!-- 週末每晚價格編輯 -->
+          <div class="edit_section edit_weekend_nightly_price_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">週末每晚價格</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+           <p>未設定</p>
+          </div>
+
+          <!-- 稅費 -->
+          <h2 class="mt-4 mb-4 h2_price_and_order_satus">稅費</h2>
+          <div class="edit_section edit_tax_section">
+            <p class="p_tax">你的房源位於Taiwan VAT Tax。根據相關要求，Airbnb 可能會代表本地區的房東向房客收取與彙繳住宿稅。 <a href="#">了解詳情</a></p>
+          </div>
+
+          <!-- 住宿晚數 -->
+          <h2 class="mt-4 mb-4 h2_price_and_order_satus">住宿晚數</h2>
+          <!-- 最短住宿晚數編輯 -->
+          <div class="edit_section edit_minimum_night_stay_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">最短住宿晚數</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+            <p>1 晚</p>
+          </div>
+
+          <!-- 最長住宿晚數編輯 -->
+          <div class="edit_section edit_maxmum_night_stay_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">最長住宿晚數</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+            <p>365 晚</p>
+          </div>
+
+          <!-- 自訂住宿晚數編輯 -->
+          <div class="edit_section edit_custom_nights_stay_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_price_and_order_satus">自訂住宿晚數</h3>
+              <button class="btn btn_edit_price_and_order_status">編輯</button>
+            </div>
+            <p>無</p>
+          </div>
+
+           <!-- 提出意見 -->
+           <button class="btn btn_your_opinions">提出意見</button>
 
         </div>
+
+        <!-- 政策和規則(第三個tab) -->
+        <div class="tab-pane fade" id="nav-policy-and-rule" role="tabpanel" aria-labelledby="nav-policy-and-rule-tab">
+          <!-- 政策 -->
+          <h2 class="mt-4 mb-4 h2_policy_and_rule">政策</h2>
+          <!-- 退訂政策編輯 -->
+          <div class="edit_section edit_cancel_reservation_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_policy_and_rule">退訂政策</h3>
+              <button class="btn btn_edit_policy_and_rule">編輯</button>
+            </div>
+            <p>彈性: 在入住日1天前取消預訂，可獲得全額退款</p>
+          </div>
+
+          <!-- 即時預定編輯 -->
+          <div class="edit_section edit_instant_booking_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_policy_and_rule">即時預定</h3>
+              <button class="btn btn_edit_policy_and_rule">編輯</button>
+            </div>
+            <p>即時預訂功能已開啟 - 符合所有條件的房客可以即時預訂房源，其他人則須傳送預訂申請。</p>
+          </div>
+
+          <!-- 入住時段編輯 -->
+          <div class="edit_section edit_ckeck_in_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_policy_and_rule">入住時段</h3>
+              <button class="btn btn_edit_policy_and_rule">編輯</button>
+            </div>
+            <p>下午3:00後</p>
+          </div>
+
+          <!-- 退房時間編輯 -->
+          <div class="edit_section edit_ckeck_out_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_policy_and_rule">退房時間</h3>
+              <button class="btn btn_edit_policy_and_rule">編輯</button>
+            </div>
+            <p>選擇時間</p>
+          </div>
+
+          <!-- 押金編輯 -->
+          <div class="edit_section edit_deposit_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_policy_and_rule">押金</h3>
+              <button class="btn btn_edit_policy_and_rule">編輯</button>
+            </div>
+            <p>未設定</p>
+          </div>
+
+          <!-- 《房屋守則》 -->
+          <h2 class="mt-4 mb-4 h2_policy_and_rule">《房屋守則》</h2>
+          <p class="p_house_rules">房客在預訂之前必須同意你的《房屋守則》。 <a href="#">了解如何設定《房屋守則》</a></p>
+          <!-- 適合兒童（2-12 歲） -->
+          <div class="edit_section edit_cancel_reservation_section">
+            <div class="d-flex justify-content-between">
+              <div class="d-flex flex-column w-75">
+                <h3 class="mt-4 h3_policy_and_rule">適合兒童（2-12 歲）</h3>
+                <p class="p_suitable_for_children">如果房源內的物品設施可能會對兒童造成傷害，你可以讓房客知道此房源不適合兒童入住。房客仍然可以聯絡你來了解詳情。 <a href="#">了解詳情</a></p>
+              </div>
+              <div class="d-flex w-25 justify-content-end">
+                  <button class="btn btn_edit_policy_and_rule_cross"> <i class="fas fa-times"></i> </button>
+                  <button class="btn btn_edit_policy_and_rule_check"> <i class="fas fa-check"></i></button>
+              </div>
+            </div>
+          </div>
+
+          <!-- 適合嬰幼兒（2 歲以下） -->
+          <div class="edit_section edit_cancel_reservation_section">
+            <div class="d-flex justify-content-between">
+              <div class="d-flex flex-column w-75">
+                <h3 class="mt-4 h3_policy_and_rule">適合嬰幼兒（2 歲以下）</h3>
+                <p class="p_suitable_for_children">如果房源內的物品設施可能會對嬰幼兒造成傷害，你可以讓房客知道此房源不適合嬰幼兒入住。房客仍然可以聯絡你來了解詳情。 <a href="#">了解詳情</a></p>
+              </div>
+              <div class="d-flex w-25 justify-content-end">
+                <button class="btn btn_edit_policy_and_rule_cross"> <i class="fas fa-times"></i> </button>
+                <button class="btn btn_edit_policy_and_rule_check"> <i class="fas fa-check"></i></button>
+            </div>
+            </div>
+          </div>
+
+            <!-- 可攜帶寵物 -->
+            <div class="edit_section edit_pet_allowed_section">
+              <div class="d-flex justify-content-between">
+                <div class="d-flex flex-column w-75">
+                  <h3 class="mt-4 h3_policy_and_rule">可攜帶寵物</h3>
+                  <p class="p_suitable_for_children">你可以限制房客攜帶寵物，但在合理情況下，仍須接受可能攜帶輔助性動物的房客。 <a href="#">了解詳情</a></p>
+                </div>
+                <div class="d-flex w-25 justify-content-end">
+                  <button class="btn btn_edit_policy_and_rule_cross"> <i class="fas fa-times"></i> </button>
+                  <button class="btn btn_edit_policy_and_rule_check"> <i class="fas fa-check"></i></button>
+              </div>
+              </div>
+            </div>
+
+          <!-- 允許吸煙 -->
+          <div class="edit_section edit_smoking_allowed_section">
+            <div class="d-flex justify-content-between">
+              <div class="d-flex flex-column w-75">
+                <h3 class="mt-4 h3_policy_and_rule">允許吸煙</h3>
+              </div>
+              <div class="d-flex w-25 justify-content-end">
+                <button class="btn btn_edit_policy_and_rule_cross"> <i class="fas fa-times"></i> </button>
+                <button class="btn btn_edit_policy_and_rule_check"> <i class="fas fa-check"></i></button>
+            </div>
+            </div>
+          </div>
+
+          <!-- 允許舉辦活動 -->
+          <div class="edit_section edit_events_are_allowed_section">
+            <div class="d-flex justify-content-between">
+              <div class="d-flex flex-column w-75">
+                <h3 class="mt-4 h3_policy_and_rule">允許舉辦活動</h3>
+              </div>
+              <div class="d-flex w-25 justify-content-end">
+                <button class="btn btn_edit_policy_and_rule_cross"> <i class="fas fa-times"></i> </button>
+                <button class="btn btn_edit_policy_and_rule_check"> <i class="fas fa-check"></i></button>
+            </div>
+            </div>
+          </div>
+
+         <!-- 其他守則編輯 -->
+         <div class="edit_section edit_other_rules_section">
+          <div class="d-flex justify-content-between">
+            <h3 class="mt-4 h3_policy_and_rule">其他守則</h3>
+            <button class="btn btn_edit_policy_and_rule">編輯</button>
+          </div>
+          <p>未設定</p>
+         </div>
+
+         <!-- 提出意見 -->
+         <button class="btn btn_your_opinions">提出意見</button>
+
+        </div>
+
         <!-- 房客資訊(第四個tab) -->
         <div class="tab-pane fade" id="nav-guest-info" role="tabpanel" aria-labelledby="nav-guest-info-tab">
+          <!-- 預訂前詳情 -->
+          <h2 class="mt-4 mb-4 h2_guest_info">預訂前詳情</h2>
+          <!-- 入住時段編輯 -->
+          <div class="edit_section edit_check_in_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_guest_info">入住時段</h3>
+              <button class="btn btn_guest_info">編輯</button>
+            </div>
+            <p class="edit_check_in">下午3:00後</p>
+          </div>
+
+          <!-- 退房時間編輯 -->
+          <div class="edit_section edit_check_out_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_guest_info">退房時間</h3>
+              <button class="btn btn_guest_info">編輯</button>
+            </div>
+            <p class="edit_check_out">選擇時間</p>
+          </div>
+
+          <!-- 預訂後詳情 -->
+          <h2 class="mt-4 mb-4 h2_guest_info">預訂後詳情</h2>
+          <!-- 地址編輯 -->
+          <div class="edit_section edit_address_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_guest_info">地址</h3>
+              <button class="btn btn_guest_info">編輯</button>
+            </div>
+            <p class="edit_address">No. 101號, Banxin Rd, Banqiao District, New Taipei City, Taiwan 220</p>
+          </div>
+
+          <!-- 路線編輯 -->
+          <div class="edit_section edit_path_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_guest_info">路線</h3>
+              <button class="btn btn_guest_info">編輯</button>
+            </div>
+            <p>未設定</p>
+          </div>
+
+          <!-- 抵達詳情 -->
+          <h2 class="mt-4 mb-4 h2_guest_info">抵達詳情</h2>
+          <!-- 入住說明編輯 -->
+          <div class="edit_section edit_check_in_instructions_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_guest_info">入住說明</h3>
+              <button class="btn btn_guest_info">編輯</button>
+            </div>
+            <p class="edit_address">未設定</p>
+          </div>
+
+          <!-- WiFi詳情編輯 -->
+          <div class="edit_section edit_WiFi_detail_section">
+            <div class="d-flex justify-content-between">
+              <h3 class="mt-4 h3_guest_info">WiFi詳情</h3>
+              <button class="btn btn_guest_info">編輯</button>
+            </div>
+          </div>
+
+          <!-- 提出意見 -->
+          <button class="btn btn_your_opinions">提出意見</button>
+
         </div>
+
+
     </section>
 
 
